Products.CMFCore Changelog

  Products.CMFCore 2.2.0 (unreleased)

    - removed the five.localsitemanager svn:external and its import hack
      in favor of stating the dependency for separate installation in
      DEPENDENCIES.txt and automatic installation in setup.py.

    - TypesTool: Refactored content creation.
      Moved notifyWorkflowCreated and indexObject calls to IObjectAddedEvent
      handler. Please make sure all oldstyle content factory methods use
      _setObject with suppress_events=True. CMF factory methods don't finish
      object creation, so they should not send the IObjectAddedEvent.

    - interfaces: Added ICatalogAware for CMFCatalogAware methods.

    - setup handlers: All import and export steps are now registered globally.

    - MembershipTool: Removed ancient LoginManager compatibility code and
      deprecated the no longer needed __getPUS method.

    - interfaces: Removed deprecated oldstyle interfaces.


  Products.CMFCore 2.1.x

    For a complete list see CHANGES.txt of the 2.1 branch.


  Products.CMFCore 2.1.0 (2007-08-08)

    First egg release.  For changes up through this release, please see
    the overall "CMF changelog",
    http://svn.zope.org/CMF/tags/2.1.0/CHANGES.txt?rev=78713&view=markup