@@ -34,23 +34,26 @@ class ConformsToFolder:
 
     def test_folder_interfaces(self):
         from webdav.interfaces import IWriteLock
-        from Products.CMFCore.interfaces import ICatalogAware
         from Products.CMFCore.interfaces import IDynamicType
         from Products.CMFCore.interfaces import IFolderish
         from Products.CMFCore.interfaces import IMutableMinimalDublinCore
 
-        verifyClass(ICatalogAware, self._getTargetClass())
         verifyClass(IDynamicType, self._getTargetClass())
         verifyClass(IFolderish, self._getTargetClass())
         verifyClass(IMutableMinimalDublinCore, self._getTargetClass())
         verifyClass(IWriteLock, self._getTargetClass())
+
+    def test_folder_extra_interfaces(self):
+        # in the long run this interface will become deprecated
+        from Products.CMFCore.interfaces import IOpaqueItemManager
+
+        verifyClass(IOpaqueItemManager, self._getTargetClass())
 
 
 class ConformsToContent:
 
     def test_content_interfaces(self):
         from Products.CMFCore.interfaces import ICatalogableDublinCore
-        from Products.CMFCore.interfaces import ICatalogAware
         from Products.CMFCore.interfaces import IContentish
         from Products.CMFCore.interfaces import IDublinCore
         from Products.CMFCore.interfaces import IDynamicType
@@ -58,12 +61,21 @@ class ConformsToContent:
         from Products.GenericSetup.interfaces import IDAVAware
 
         verifyClass(ICatalogableDublinCore, self._getTargetClass())
-        verifyClass(ICatalogAware, self._getTargetClass())
         verifyClass(IContentish, self._getTargetClass())
         verifyClass(IDAVAware, self._getTargetClass())
         verifyClass(IDublinCore, self._getTargetClass())
         verifyClass(IDynamicType, self._getTargetClass())
         verifyClass(IMutableDublinCore, self._getTargetClass())
+
+    def test_content_extra_interfaces(self):
+        # in the long run these interfaces will become deprecated
+        from Products.CMFCore.interfaces import ICatalogAware
+        from Products.CMFCore.interfaces import IOpaqueItemManager
+        from Products.CMFCore.interfaces import IWorkflowAware
+
+        verifyClass(ICatalogAware, self._getTargetClass())
+        verifyClass(IOpaqueItemManager, self._getTargetClass())
+        verifyClass(IWorkflowAware, self._getTargetClass())
 
 
 class BrowserLanguages(object):
